manifests/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elenchos
  name: elenchos
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: elenchos
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: elenchos
    spec:
      containers:
        - image: gcr.io/elenchos/app
          resources:
            requests:
              memory: "2Gi"
          imagePullPolicy: Always
          securityContext:
            privileged: true
          name: elenchos
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker
            - name: git-storage
              mountPath: /code
      volumes:
        - name: git-storage
          persistentVolumeClaim:
            claimName: git-storage
        - name: dind-storage
          persistentVolumeClaim:
            claimName: dind-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
