manifests/base/registry-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
  labels:
    app: registry
spec:
  containers:
    - name: registry
      image: registry:2
      imagePullPolicy: Always
      ports:
        - containerPort: 5000
      volumeMounts:
        - name: registry-claim
          mountPath: /var/lib/registry

  volumes:
    - name: registry-claim
      persistentVolumeClaim:
        claimName: registry-claim
