manifests/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: elenchos
  name: elenchos
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: elenchos
